assets/css/cover.css
body,h1,h5 {font-family: 'Fredericka the Great', cursive;}
body, html {height: 100%;      
  background-image: url('../images/BreweryLandingPage_5.jpg');
  min-height: 100%;
  background-position: center;
  background-size: cover;
  background-blend-mode: luminosity; 
  filter: brightness(95%); 
}

.masthead-brand{
  font-family: 'Fredericka the Great', cursive;
  font-size: 45px;
  font-weight: 600px;
  margin-left: 300px;
  padding-top: 200px;
  color: #ffd700;
  text-shadow: 8px 8px 8px green;
  align-items: center
  
}


#myBtn {
  margin-bottom: 100px;
  margin-top: 84px;
  font-size: 45px;
  margin-left: 400px;
  background-color: #ffd700;
  outline: green;
  border-radius: 25px;
}


 #zip-col{

 margin-left: 300px;

 

}
#radius-cal{
  padding-left: 5px;
  width:
 
}

#rating-cal{
  padding-left: 5px;
  margin-left:-75px;
 
}

#search {
  padding-left: 5px;
  margin-left:-85px;
  
}


/* }
.logo {
  margin-bottom: 0px;
  margin-top: 84px;
  font-size: 45px;
  margin-left: 640px;
  color: #ffd700; */

}

/* Custom default button */
/* .btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: #333;
  box-shadow: 5px 10px 18px #cfae06; /* Prevent inheritance from `body` */
  /* background-color: #fff;
  border-block-end-style: .05rem solid black;
} */

